--- a/java.html
+++ b/java.html
@@ -9,6 +9,7 @@ Index.html
 <title>Zorana Turs</title>
 </head>
 <body>
+  <iframe width="100%" height="800" frameBorder="0" src="https://botmake.io/zorana?preview=yes"></iframe> 
 <img class="logo" src="slike/logo.png" />
 <nav>
 <ul>
@@ -192,7 +193,6 @@ prijava.html
 <input type="button" value="PRIJAVI SE" />
 </fieldset>
 </form>
-<script type="text/javascript"> let headID = document.getElementsByTagName("head")[0]; let newCss = document.createElement('link'); newCss.rel = 'stylesheet'; newCss.type = 'text/css'; newCss.href = "https://botmake.io/embed/bot502914.css"; let newScript = document.createElement('script'); newScript.src = "https://botmake.io/embed/bot502914.js"; newScript.type = 'text/javascript'; headID.appendChild(newScript); headID.appendChild(newCss); </script>
 </body>
 </html>
 <!--Ovo je test -->
